tests/NormalTests/paczka1/small_fuzzy/21950433.err
Error in line 3: NVaCz S505 42,00
Error in line 2: 97dGFQ S117 95,0
Error in line 1: lnRBCo5C S694 39,4
Error in line 6: S505 S117 9,4
Error in line 15: lnRBCo5C S117 83,6
